# django-importmap

./: LICENSE  README.md  setup.cfg  setup.py
importmap/: importmap.py  tests.py
importmap/management/commands/: importmap.py
importmap/templatetags/: importmap.py
