[metadata]
name = django-importmap
version = 0.1
description = A Django app to dynamically import.
long_description = file: README.rst
author = Akhmed Gaziev
author_email = mail@akhmedgaziev.ru
license = BSD-3-Clause
classifiers =
    Framework :: Django
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
packages = find:s
python_requires = >=3.8
install_requires =
    Django >= 4.1